[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "jupytercontrib"
author = "Matthias Bussonnier"
author-email = "bussonniermatthias@gmail.com"
home-page = "https://github.com/Carreau/jupytercontrib"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "readme.md"
requires = ["nbconvert"]


[tool.flit.entrypoints."nbconvert.exporters"]
2to3 = "jupytercontrib:Python2to3Exporter"
mdoutput = "jupytercontrib:MarkdownOutputExporter"
